--- a/templates/faculty/faculty.html
+++ b/templates/faculty/faculty.html
@@ -5,34 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fakulteti i Shkencave të Natyrës | FSHN</title>
     {% load static %}
-    <link rel='stylesheet' href='{% static 'plugins/goodlayers-core/plugins/combine/style.css' %}' type='text/css' media='all' />
-    <link rel='stylesheet' href='{% static 'plugins/goodlayers-core/include/css/page-builder.css' %}' type='text/css' media='all' />
-    <link rel='stylesheet' href='{% static 'plugins/revslider/public/assets/css/settings.css' %}' type='text/css' media='all' />
-    <link rel='stylesheet' href='{% static 'css/style-core.css' %}' type='text/css' media='all' />
-    <link rel='stylesheet' href='{% static 'css/fshn-style-custom.css' %}' type='text/css' media='all' />
-    <link rel="icon" href="{% static 'images/fshn_logo_png.png' %}">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700%2C400" rel="stylesheet" property="stylesheet" type="text/css" media="all">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CABeeZee%3Aregular%2Citalic&amp;subset=latin%2Clatin-ext%2Cdevanagari&amp;ver=5.0.3' type='text/css' media='all' />
+    {% include 'includes/stylesheets.html' %}
 </head>
 <body class="home page-template-default page page-id-2039 gdlr-core-body woocommerce-no-js tribe-no-js fshn-body fshn-body-front fshn-full  fshn-with-sticky-navigation  fshn-blockquote-style-1 gdlr-core-link-to-lightbox">
     {% include 'faculty/includes/faculty_mobile_header.html' %}
     <div class="fshn-body-outer-wrapper ">
         <div class="fshn-body-wrapper clearfix  fshn-with-frame">
-            <div class="fshn-top-bar">
-                <div class="fshn-top-bar-background"></div>
-                <div class="fshn-top-bar-container fshn-container ">
-                    <div class="fshn-top-bar-container-inner clearfix">
-                        <div class="fshn-top-bar-left fshn-item-pdlr"><i class="fa fa-envelope-open-o" style="font-size: 15px ;color: #96a2b8 ;margin-right: 8px ;"></i> info@fshn.edu.al <i class="fa fa-phone" style="font-size: 15px ;color: #96a2b8 ;margin-left: 18px ;margin-right: 6px ;"></i> +355 4 255 6987</div>
-                        <div class="fshn-top-bar-right fshn-item-pdlr">
-                            <ul id="fshn-top-bar-menu" class="sf-menu fshn-top-bar-menu fshn-top-bar-right-menu">
-                                <li class="menu-item fshn-normal-menu"><a href="{% url 'evente' %}">Evente</a></li>
-                                <li class="menu-item fshn-normal-menu"><a href="{% url 'kritere-dhe-kuota' %}">Kritere & Kuota</a></li>
-                                <li class="menu-item fshn-normal-menu"><a href="{% url 'portali' %}">Portali</a></li>
-                            </ul>
-                            <div class="fshn-top-bar-right-social"></div><a class="fshn-top-bar-right-button" href="{% url 'buletini-shkencor' %}" target="_blank">Buletini Shkencor</a></div>
-                    </div>
-                </div>
-            </div>
             {% include 'faculty/includes/faculty_header.html' %}
             <div class="fshn-page-wrapper" id="fshn-page-wrapper">
                 <div class="gdlr-core-page-builder-body">
