--- a/templates/faculty/includes/faculty_header.html
+++ b/templates/faculty/includes/faculty_header.html
@@ -1,4 +1,19 @@
 {% load static %}
+<div class="fshn-top-bar">
+    <div class="fshn-top-bar-background"></div>
+    <div class="fshn-top-bar-container fshn-container ">
+        <div class="fshn-top-bar-container-inner clearfix">
+            <div class="fshn-top-bar-left fshn-item-pdlr"><i class="fa fa-envelope-open-o" style="font-size: 15px ;color: #96a2b8 ;margin-right: 8px ;"></i> info@fshn.edu.al <i class="fa fa-phone" style="font-size: 15px ;color: #96a2b8 ;margin-left: 18px ;margin-right: 6px ;"></i> +355 4 255 6987</div>
+            <div class="fshn-top-bar-right fshn-item-pdlr">
+                <ul id="fshn-top-bar-menu" class="sf-menu fshn-top-bar-menu fshn-top-bar-right-menu">
+                    <li class="menu-item fshn-normal-menu"><a href="{% url 'evente' %}">Evente</a></li>
+                    <li class="menu-item fshn-normal-menu"><a href="{% url 'kritere-dhe-kuota' %}">Kritere & Kuota</a></li>
+                    <li class="menu-item fshn-normal-menu"><a href="{% url 'portali' %}">Portali</a></li>
+                </ul>
+                <div class="fshn-top-bar-right-social"></div><a class="fshn-top-bar-right-button" href="{% url 'buletini-shkencor' %}" target="_blank">Buletini Shkencor</a></div>
+        </div>
+    </div>
+</div>
 <header class="fshn-header-wrap fshn-header-style-plain  fshn-style-menu-right fshn-sticky-navigation fshn-style-fixed" data-navigation-offset="75px">
     <div class="fshn-header-background"></div>
     <div class="fshn-header-container  fshn-container">
@@ -11,8 +26,8 @@
             <div class="fshn-navigation fshn-item-pdlr clearfix ">
                 <div class="fshn-main-menu" id="fshn-main-menu">
                     <ul id="menu-main-navigation-1" class="sf-menu">
-                        <li class="menu-item menu-item-home fshn-normal-menu"><a href="{% url 'index' %}" class="sf-with-ul-pre">Kreu</a></li>
-                        <li class="menu-item current-menu-item menu-item-has-children"><a href="{% url 'fakulteti' %}" class="sf-with-ul-pre">Fakulteti</a>
+                        <li class="menu-item menu-item-home menu-item-has-children fshn-normal-menu"><a href="{% url 'index' %}" class="sf-with-ul-pre">Kreu</a></li>
+                        <li class="menu-item current-menu-item fshn-normal-menu menu-item-has-children sf-with-ul-pre"><a href="{% url 'fakulteti' %}">Fakulteti</a>
                             <ul class="sub-menu">
                                 <li class="menu-item" data-size="60"><a href="{% url 'fakulteti' %}">Historiku</a> </li>
                                 <li class="menu-item" data-size="60"><a href="{% url 'fakulteti' %}">Struktura drejtuese</a> </li>
@@ -30,10 +45,10 @@
                                 <li class="menu-item" data-size="60"><a href="{% url 'departamenti-kimisë-industriale' %}">Departamenti i Kimisë Industriale</a></li>
                                 <li class="menu-item" data-size="60"><a href="{% url 'departamenti-matematikës' %}">Departamenti i Matematikës</a></li>
                                 <li class="menu-item" data-size="60"><a href="{% url 'departamenti-matematikës-aplikuar' %}">Departamenti i Matematikës së Aplikuar</a></li>
-                                <li class="menu-item" data-size="60"><a href="{% url 'qendra-kërkimore-florës-dhe-faunës' %}">Qendra Kërkimore e Florës dhe Faunës</a></li>
+                                <li class="menu-item" data-size="60"><a href="{% url 'qendra-kërkimore-florës-dhe-faunës' %}">Qendra Kërkimore e Florës dhe e Faunës</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item menu-item-has-children fshn-mega-menu"><a href="#" class="sf-with-ul-pre">Kërkimi Shkencor</a>
+                        <li class="menu-item menu-item-has-children fshn-mega-menu"><a href="{% url 'doktoratura' %}" class="sf-with-ul-pre">Kërkimi Shkencor</a>
                             <div class="sf-mega sf-mega-full megaimg">
                                 <ul class="sub-menu">
                                     <li class="menu-item menu-item-has-children" data-size="15"><a class="sf-with-ul-pre">Projekte</a>
@@ -48,7 +63,7 @@
                                             <li class="menu-item"><a href="{% url 'projekte' %}">Software Testing and Deployment Lab</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-item menu-item-has-children" data-size="15"><a href="#" class="sf-with-ul-pre">Doktoratura</a>
+                                    <li class="menu-item menu-item-has-children" data-size="15"><a href="{% url 'doktoratura' %}" class="sf-with-ul-pre">Doktoratura</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="{% url 'doktoratura' %}">Departamenti i Biologjisë</a></li>
                                             <li class="menu-item"><a href="{% url 'doktoratura' %}">Departamenti i Bioteknologjisë</a></li>
@@ -61,7 +76,7 @@
                                             <li class="menu-item"><a href="{% url 'doktoratura' %}">Qendra Kërkimore e Florës dhe Faunës</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-item menu-item-has-children" data-size="15"><a href="#" class="sf-with-ul-pre">Publikime & Konferenca</a>
+                                    <li class="menu-item menu-item-has-children" data-size="15"><a href="{% url 'publikime-dhe-konferenca' %}" class="sf-with-ul-pre">Publikime & Konferenca</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="{% url 'publikime-dhe-konferenca' %}">Departamenti i Biologjisë</a></li>
                                             <li class="menu-item"><a href="{% url 'publikime-dhe-konferenca' %}">Departamenti i Bioteknologjisë</a></li>
@@ -82,7 +97,7 @@
                         </li>
                         <li class="menu-item menu-item-has-children fshn-normal-menu"><a href="{% url 'studenti' %}" class="sf-with-ul-pre">Studenti</a>
                             <ul class="sub-menu">
-                                <li class="menu-item" data-size="60"><a href="{% url 'njoftime' %}">Njoftime</a></li>
+                                <li class="menu-item" data-size="60"><a href="{% url 'studenti' %}">Njoftime</a></li>
                                 <li class="menu-item" data-size="60"><a href="{% url 'studenti' %}">Orari</a></li>
                                 <li class="menu-item" data-size="60"><a href="{% url 'studenti' %}">Provime</a></li>
                                 <li class="menu-item" data-size="60"><a href="{% url 'studenti' %}">Email Studenti</a></li>
